--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@ In Berlin will have a coding jam at Pixtur’s office in Wedding with Pandur, Lu
 <br/><br/><br/>
 We also will setup a Discord channel and post the invite here.
 
+We will publish the results here. 
+
+<br/><br/>
+Join us! Have fun and remember: There is so little time there is no way you could screw this up (besides by not trying).
+
+
 
 <h2>Timetable</h2>
 <table>
@@ -76,13 +82,11 @@ We also will setup a Discord channel and post the invite here.
 
 <ul>
     <li><a href="https://2022.inercia.pt">inercia Website</a></li>
+    <li><a href="https://github.com/pandrr/fast-challenge-web">github repo for this page</a></li>
 </ul>
 
 
 
-<h2>more soon!</h2>
-
-We will publish the results here. Join us! Have fun and remember: There is so little time there is no way you could screw this up (besides by not trying).
 </div>
 
     </body>
