--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     
         <h2>wtf?</h2>
-        For Deadline 2022 LJ and Virgill organized the fantastic “One Cube” — challenge: Just take this awesome soundtrack with a reasonably short length, and here is a theme that’s open enough to make a fast demo about.
+        For Deadline 2022 LJ and Virgill organized the fantastic "One Cube" — challenge: Just take this awesome soundtrack with a reasonably short length, and here is a theme that's open enough to make a fast demo about.
         <br/><br/>
         The results were 5 stunning fast entries for the anaglyph demo compo and a lot fun working together on stuff.
 
@@ -34,7 +34,7 @@ So here comes installment #2. We will aim for Inercia 2022.
 This time Gloom and JCO are contributing the soundtrack.
 
 <br/><br/>
-In Berlin will have a coding jam at Pixtur’s office in Wedding with Pandur, Lucid and others joining in.
+In Berlin will have a coding jam at Pixtur's office in Wedding with Pandur, Lucid and others joining in.
 <br/><br/><br/>
 We also will setup a Discord channel and post the invite here.
 
@@ -61,7 +61,7 @@ Join us! Have fun and remember: There is so little time there is no way you coul
     <tr>
         <td>Saturday</td>
         <td>14:00 CET</td>
-        <td>You should indicate if you’re planning to release an entry</td>
+        <td>You should indicate if you're planning to release an entry</td>
     </tr>
 
     <tr>
