--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ So here comes installment #2. We will aim for Inercia 2022.
 
 <br/>
 
-This time Gloom and JCO are contributing the soundtrack.
+There will be a theme or a prompt, some random words that the demo should be about. We will publish them on friday<br/>
+This time Gloom and JCO are contributing the soundtrack.<br/>
 
 <br/><br/>
 In Berlin will have a coding jam at Pixtur's office in Wedding with Pandur, Lucid and others joining in.
@@ -50,12 +51,14 @@ Join us! Have fun and remember: There is so little time there is no way you coul
     <tr>
         <td>Friday</td>
         <td></td>
-        <td>We will publish the soundtracks and midi-files on this site and on Discord.</td>
     </tr>
     <tr>
         <td>Friday</td>
-        <td>20:00 CET</td>
-        <td>We will roll the dice to get a random prompt for the theme.</td>
+        <td>18:00 CET</td>
+        <td>
+            - We will publish the soundtracks and midi-files on this site and on Discord.
+            <br/>
+            - We will roll the dice to get a random prompt for the theme.</td>
     </tr>
 
     <tr>
