--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
         For Deadline 2022 LJ and Virgill organized the fantastic "One Cube" — challenge: Just take this awesome soundtrack with a reasonably short length, and here is a theme that's open enough to make a fast demo about.
         <br/><br/>
         The results were 5 stunning fast entries for the anaglyph demo compo and a lot fun working together on stuff.
-
 <!-- 
+<span class="quote">
 "Perfect is the enemy of good"<br/>
 — Voltaire
+</span>
+<br/> -->
 
-<br/><br/>
-
-"The only way to make better demos is to release.""<br/>
-— nero<br/> -->
 
 <h2>Fast challenge 2: Inercia 2022</h2>
 
@@ -43,6 +41,13 @@ We will publish the results here.
 
 <br/><br/>
 Join us! Have fun and remember: There is so little time there is no way you could screw this up (besides by not trying).
+<br/>
+
+<br/>
+<span class="quote">"The only way to make better demos is to release."<br/>
+    — nero<br/>
+</span>
+
 
 
 
