--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+
     </head>
     <body>
 
@@ -15,83 +17,85 @@
         For Deadline 2022 LJ and Virgill organized the fantastic "One Cube" — challenge: Just take this awesome soundtrack with a reasonably short length, and here is a theme that's open enough to make a fast demo about.
         <br/><br/>
         The results were 5 stunning fast entries for the anaglyph demo compo and a lot fun working together on stuff.
-<!-- 
-<span class="quote">
-"Perfect is the enemy of good"<br/>
-— Voltaire
-</span>
-<br/> -->
+        <!-- 
+        <span class="quote">
+        "Perfect is the enemy of good"<br/>
+        — Voltaire
+        </span>
+        <br/> -->
 
 
-<h2>Fast challenge 2: Inercia 2022</h2>
+        <h2>Fast challenge 2: Inercia 2022</h2>
 
-So here comes installment #2. We will aim for Inercia 2022. 
+        So here comes installment #2. We will aim for Inercia 2022. 
 
-<br/>
+        <br/>
 
-There will be a theme or a prompt, some random words that the demo should be about. We will publish them on friday<br/>
-This time Gloom and JCO are contributing the soundtrack.<br/>
+        There will be a theme or a prompt, some random words that the demo should be about. We will publish them on friday<br/>
+        This time Gloom and JCO are contributing the soundtrack.<br/>
 
-<br/><br/>
-In Berlin will have a coding jam at Pixtur's office in Wedding with Pandur, Lucid and others joining in.
-<br/><br/><br/>
-We also will setup a Discord channel and post the invite here.
+        <br/><br/>
+        In Berlin will have a coding jam at Pixtur's office in Wedding with Pandur, Lucid and others joining in.
+        <br/><br/><br/>
 
-We will publish the results here. 
+        <a href="https://discord.gg/4MpV2CsJ">join the discord channel!</a>
 
-<br/><br/>
-Join us! Have fun and remember: There is so little time there is no way you could screw this up (besides by not trying).
-<br/>
+        <br/><br/>
+        Results will be published on this page!
 
-<br/>
-<span class="quote">"The only way to make better demos is to release."<br/>
-    — nero<br/>
-</span>
+        <br/><br/>
+        Join us! Have fun and remember: There is so little time there is no way you could screw this up (besides by not trying).
+        <br/>
 
+        <br/>
+        <span class="quote">"The only way to make better demos is to release."<br/>
+            — nero<br/>
+        </span>
 
-
-
-<h2>Timetable</h2>
-<table>
-    <tr>
-        <td>Friday</td>
-        <td></td>
-    </tr>
-    <tr>
-        <td>Friday</td>
-        <td>18:00 CET</td>
-        <td>
-            - We will publish the soundtracks and midi-files on this site and on Discord.
-            <br/>
-            - We will roll the dice to get a random prompt for the theme.</td>
-    </tr>
-
-    <tr>
-        <td>Saturday</td>
-        <td>14:00 CET</td>
-        <td>You should indicate if you're planning to release an entry</td>
-    </tr>
-
-    <tr>
-        <td>Saturday</td>
-        <td>18:00 CET</td>
-        <td>Deadline / Upload closes</td>
-    </tr>
-
-    <tr>
-        <td>Saturday</td>
-        <td>00:00 CET</td>
-        <td>Midnight— Screening / Watching live stream</td>
-    </tr>
-</table>
+<hr/>
 
 
-<h2>Links</h2>
+        <h2>Timetable</h2>
+        <table>
+            <tr>
+                <td>Friday</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Friday</td>
+                <td>18:00 CET</td>
+                <td>
+                    - We will publish the soundtracks and midi-files on this site and on Discord.
+                    <br/>
+                    - We will roll the dice to get a random prompt for the theme.</td>
+            </tr>
 
-<ul>
-    <li><a href="https://2022.inercia.pt">inercia Website</a></li>
-    <li><a href="https://github.com/pandrr/fast-challenge-web">github repo for this page</a></li>
-</ul>
+            <tr>
+                <td>Saturday</td>
+                <td>14:00 CET</td>
+                <td>You should indicate if you're planning to release an entry</td>
+            </tr>
+
+            <tr>
+                <td>Saturday</td>
+                <td>18:00 CET</td>
+                <td>Deadline / Upload closes</td>
+            </tr>
+
+            <tr>
+                <td>Saturday</td>
+                <td>00:00 CET</td>
+                <td>Screening / Watching live stream</td>
+            </tr>
+        </table>
+
+
+        <h2>Links</h2>
+
+        <ul>
+            <li><a href="https://2022.inercia.pt">inercia Website</a></li>
+            <li><a href="https://github.com/pandrr/fast-challenge-web">github repo for this page</a></li>
+        </ul>
 
 
 
