discord and mobile responsive

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <br/>
         <span class="quote">"The only way to make better demos is to release."<br/>
-            — nero<br/>
+            - nero<br/>
         </span>
 
 <hr/>
