--- a/index.html
+++ b/index.html
@@ -32,15 +32,11 @@
         <br/>
 
         There will be a theme or a prompt, some random words that the demo should be about. We will publish them on friday<br/>
-        This time Gloom and JCO are contributing the soundtrack.<br/>
+        This time soundtrack will be contributed from Gloom or JCO.<br/>
 
         <br/><br/>
         In Berlin will have a coding jam at Pixtur's office in Wedding with Pandur, Lucid and others joining in.
         <br/><br/><br/>
-
-        <a href="https://discord.gg/4MpV2CsJ">join the discord channel!</a>
-
-        <br/><br/>
         Results will be published on this page!
 
         <br/><br/>
@@ -88,6 +84,9 @@
         <ul>
             <li><a href="https://2022.inercia.pt">inercia Website</a></li>
             <li><a href="https://github.com/pandrr/fast-challenge-web">github repo for this page</a></li>
+            <li><a href="https://discord.gg/4MpV2CsJ">join the discord channel!</a></li>
+        
+
         </ul>
 
 
