--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
 
         <ul>
             <li><a href="https://2022.inercia.pt">inercia Website</a></li>
-            <li><a href="https://github.com/pandrr/fast-challenge-web">github repo for this page</a></li>
-            <li><a href="https://discord.gg/4MpV2CsJ">join the discord channel!</a></li>
+            <li><a href="https://discord.gg/4MpV2CsJ">join the fast-challenge discord channel!</a></li>
+            <br/>
+            <li><a href="https://github.com/pandrr/fast-challenge-web">github</a></li>
         
 
         </ul>
