--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
+        <title>fast challenge</title>
         <link href="style.css" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-
+        <meta name="description" content="make a demo in 24h" />
     </head>
     <body>
 
@@ -54,15 +55,15 @@
                 <td>Friday</td>
                 <td>18:00 CET</td>
                 <td>
-                    - We will publish the soundtracks and midi-files on this site and on Discord.
+                    We will publish the soundtracks and midi-files on this site and on Discord.
                     <br/>
-                    - We will roll the dice to get a random prompt for the theme.</td>
+                    We will roll the dice to get a random prompt for the theme.</td>
             </tr>
 
             <tr>
                 <td>Saturday</td>
                 <td>14:00 CET</td>
-                <td>You should indicate if you're planning to release an entry</td>
+                <td>You should indicate if you're planning to release an entry.</td>
             </tr>
 
             <tr>
