--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     
         <h2>wtf?</h2>
-        For Deadline 2022 LJ and Virgill organized the fantastic "One Cube" — challenge: Just take this awesome soundtrack with a reasonably short length, and here is a theme that's open enough to make a fast demo about.
+        For Deadline 2022 LJ and Virgill organized the fantastic "One Cube" - challenge: Just take this awesome soundtrack with a reasonably short length, and here is a theme that's open enough to make a fast demo about.
         <br/><br/>
         The results were 5 stunning fast entries for the anaglyph demo compo and a lot fun working together on stuff.
         <!-- 
