--- a/index.html
+++ b/index.html
@@ -18,12 +18,6 @@
         For Deadline 2022 LJ and Virgill organized the fantastic "One Cube" - challenge: Just take this awesome soundtrack with a reasonably short length, and here is a theme that's open enough to make a fast demo about.
         <br/><br/>
         The results were 5 stunning fast entries for the anaglyph demo compo and a lot fun working together on stuff.
-        <!-- 
-        <span class="quote">
-        "Perfect is the enemy of good"<br/>
-        — Voltaire
-        </span>
-        <br/> -->
 
 
         <h2>Fast challenge 2: Inercia 2022</h2>
@@ -33,7 +27,10 @@
         <br/>
 
         There will be a theme or a prompt, some random words that the demo should be about. We will publish them on friday<br/>
-        This time soundtrack will be contributed from Gloom or JCO.<br/>
+        This time the soundtrack is contributed by Gloom <br/>
+
+        <a class="download" download href="files/2/Gloom_and_Flipside-Same_Old_Big_Beat_Norwegian_Soundtrack_For_Stomping_Robots_Apparently.mp3">download music</a>
+        
 
         <br/><br/>
         In Berlin will have a coding jam at Pixtur's office in Wedding with Pandur, Lucid and others joining in.
