--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <br/>
 
         There will be a theme or a prompt, some random words that the demo should be about. We will publish them on friday<br/>
-        This time the soundtrack is contributed by Gloom <br/>
+        This time the soundtrack is contributed by Gloom & Flipside <br/>
 
         <a class="download" download href="files/2/Gloom_and_Flipside-Same_Old_Big_Beat_Norwegian_Soundtrack_For_Stomping_Robots_Apparently.mp3">download music</a>
         
