--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
 
         <ul>
             <li><a href="https://2022.inercia.pt">inercia Website</a></li>
+            <br/>
             <li><a href="https://discord.gg/4MpV2CsJ">join the fast-challenge discord channel!</a></li>
+            <li><a href="https://my.sendinblue.com/users/subscribe/js_id/3pva5/id/2">get emailed about fast challenges in the future!!!!!!1</a></li>
+
             <br/>
             <li><a href="https://github.com/pandrr/fast-challenge-web">github</a></li>
-        
+
 
         </ul>
 
