--- a/index.html
+++ b/index.html
@@ -79,11 +79,14 @@
 
         <h2>Links</h2>
 
+        <a class="download" href="https://my.sendinblue.com/users/subscribe/js_id/3pva5/id/2">get emailed about fast challenges in the future!!!!!!1</a>
+        
+        <br/><br/>
+        
         <ul>
             <li><a href="https://2022.inercia.pt">inercia Website</a></li>
             <br/>
             <li><a href="https://discord.gg/4MpV2CsJ">join the fast-challenge discord channel!</a></li>
-            <li><a href="https://my.sendinblue.com/users/subscribe/js_id/3pva5/id/2">get emailed about fast challenges in the future!!!!!!1</a></li>
 
             <br/>
             <li><a href="https://github.com/pandrr/fast-challenge-web">github</a></li>
