--- a/index.html
+++ b/index.html
@@ -33,8 +33,17 @@
 
         <a class="download" download href="files/2/midi.mid">download midi file</a>
         
-
         <br/><br/><br/>
+
+        Theme: Topics are:<br/><br/>
+
+        <span class="keyword">Flow</span>
+        <span class="keyword">High Contrast</span>
+        <span class="keyword">Random</span>
+        <span class="keyword">Pink</span>
+        
+
+        <br/><br/><br/><br/>
         Results will be published on this page!
 
         <br/><br/>
