results wip inercia

--- a/index.html
+++ b/index.html
@@ -13,6 +13,110 @@
         <h1>Fast challenge: <br/>
         <b>make a demo in 24h</b></h1>
 
+
+
+<h2>Results Inercia</h2>
+
+
+<table>
+    <tr>
+        <th>place</th>
+        <th>name</th>
+        <th>author</th>
+        <th>party place</th>
+        <th>links</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Pinky</td>
+        <td>Still</td>
+        <td>3</td>
+        <td>
+
+        </td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>24 HOUR PARTY PEOPLE</td>
+        <td>MFX</td>
+        <td>4</td>
+        <td>
+            <a href="https://www.pouet.net/prod.php?which=92804">pouet</a>
+
+        </td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>flow text, high text, contrast text, random text, pink text</td>
+        <td>AttentionWhore</td>
+        <td>7</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>protogon</td>
+        <td>holon</td>
+        <td>8</td>
+        <td>
+            <a href="https://www.pouet.net/prod.php?which=92811">pouet</a>
+        </td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>re.sign</td>
+        <td>kb&darya</td>
+        <td>8</td>
+        <td>
+            <a href="https://www.pouet.net/prod.php?which=92803">pouet</a>
+        </td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>depressa e bem</td>
+        <td>anticore/GSA</td>
+        <td>11</td>
+    </tr>
+    <tr>
+        <td>6</td>
+        <td>THE MYSTERY OF THE APOSTOLIC CHURCH</td>
+        <td>jumalauta</td>
+        <td>12</td>
+        <td>
+            <a href="https://www.pouet.net/prod.php?which=92808">pouet</a>
+        </td>
+    </tr>
+    <tr>
+        <td>7</td>
+        <td>fromzerotoheroin24h</td>
+        <td>pestis / brainlez Coders</td>
+        <td>14</td>
+    </tr>
+    <tr>
+        <td>8</td>
+        <td>depressa e bem</td>
+        <td>anticore/GSA</td>
+        <td>11</td>
+    </tr>
+    <tr>
+        <td>9</td>
+        <td>Go with the flow</td>
+        <td>draugven</td>
+        <td>16</td>
+    </tr>
+    <tr>
+        <td>x</td>
+        <td>xxx</td>
+        <td>xxx</td>
+        <td>x</td>
+    </tr>
+    <tr>
+        <td>x</td>
+        <td>xxx</td>
+        <td>xxx</td>
+        <td>x</td>
+    </tr>
+</table>
+
+<br/><br/><br/><br/>
     
         <h2>wtf?</h2>
         For Deadline 2022 LJ and Virgill organized the fantastic "One Cube" - challenge: Just take this awesome soundtrack with a reasonably short length, and here is a theme that's open enough to make a fast demo about.
@@ -102,7 +206,6 @@
 
 
         </ul>
-
 
 
 </div>
