--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <h2>Results Inercia</h2>
 
+probably contains errors, feel free to help <a href="https://github.com/pandrr/fast-challenge-web">here</a>
+<br/><br/>
 
 <table>
     <tr>
