--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>8</td>
         <td>
             <a href="https://www.pouet.net/prod.php?which=92803">pouet</a>
+            <a href="https://demozoo.org/productions/315072/">demozoo</a>
         </td>
     </tr>
     <tr>
@@ -78,6 +79,8 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>10</td>
         <td>
             <a href="https://www.pouet.net/prod.php?which=92813">pouet</a>
+            <a href="https://demozoo.org/productions/315084/">demozoo</a>
+            
         </td>
     </tr>
     <tr>
@@ -93,6 +96,7 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>12</td>
         <td>
             <a href="https://www.pouet.net/prod.php?which=92808">pouet</a>
+            <a href="https://cables.gl/p/IxaL3h">cables.gl</a>
         </td>
     </tr>
     <tr>
@@ -100,6 +104,9 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>fromzerotoheroin24h</td>
         <td>pestis / brainlez Coders</td>
         <td>14</td>
+        <td>
+            <a href="https://demozoo.org/productions/315072/">demozoo</a>
+        </td>
     </tr>
 
     <tr>
