--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>Jin X</td>
         <td>15</td>
         <td>
-            <a hred="https://www.shadertoy.com/view/csBGRK">shadertoy</a>
+            <a href="https://www.shadertoy.com/view/csBGRK">shadertoy</a>
         </td>
     </tr>
     <tr>
