--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>Still</td>
         <td>3</td>
         <td>
+            <a href="https://www.pouet.net/prod.php?which=92823">pouet</a>
+            <a href="https://www.youtube.com/watch?v=6q2UCZl6-SE">youtube</a>
+            
 
         </td>
     </tr>
