--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>4</td>
         <td>
             <a href="https://www.pouet.net/prod.php?which=92804">pouet</a>
-
+            <a href="https://www.youtube.com/watch?v=nZEQ4a1ZT8I">youtube</a>
         </td>
     </tr>
     <tr>
@@ -63,6 +63,7 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>8</td>
         <td>
             <a href="https://www.pouet.net/prod.php?which=92811">pouet</a>
+            <a href="https://www.youtube.com/watch?v=OIVnf7oaoGY">youtube</a>
         </td>
     </tr>
     <tr>
