--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>flow text, high text, contrast text, random text, pink text</td>
         <td>AttentionWhore</td>
         <td>7</td>
+        <td>
+            <a href="https://www.pouet.net/prod.php?which=92825">pouet</a>
+            <a href="https://www.youtube.com/watch?v=b0_Tv9m5BRw">youtube</a>
+        </td>
     </tr>
     <tr>
         <td>4</td>
