--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@ probably contains errors, feel free to help <a href="https://github.com/pandrr/f
         <td>15</td>
         <td>
             <a href="https://www.shadertoy.com/view/csBGRK">shadertoy</a>
+            <a href="https://www.pouet.net/prod.php?which=92840">shadertoy</a>
+            <a href="https://www.youtube.com/watch?v=6EzB8AUUjYs">youtube</a>
         </td>
     </tr>
     <tr>
