--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <h2>Timetable</h2>
         <table>
             <tr>
-                <td>28th </td>
-                <td>??:00 CET</td>
+                <td><nowrap>Dec, 28th</nowrap></td>
+                <td>14:45 CET</td>
                 <td>
-                    We will publish the soundtracks and midi-files on this site and on Discord.
-                    <br/>
-                    We will roll the dice to get a random prompt for the theme.</td>
+                    Join us on <a href="https://discord.gg/4MpV2CsJ">Discord</a> for the official start ceremony: <br/>
+                    Together we will roll the dice to get a random prompt for the theme and reveal the soundtrack and midi-files for this challenge.                    
+                </td>
             </tr>
 
 <!--             <tr>
