--- a/index.html
+++ b/index.html
@@ -70,28 +70,34 @@
             </tr>
 
 <!--             <tr>
-                <td>Saturday</td>
+                <td>29th</td>
                 <td>14:00 CET</td>
                 <td>You should indicate if you're planning to release an entry.</td>
             </tr>
  -->
             <tr>
-                <td>Saturday</td>
+                <td>29th</td>
                 <td>15:00 CET</td>
                 <td>Deadline / Upload closes</td>
             </tr>
 
             <tr>
-                <td>Saturday</td>
+                <td>29th</td>
                 <td>22:00 CET</td>
                 <td>Compo / Live stream</td>
             </tr>
         </table>
 
-            <h2>Archive</h2>
 
-            <a href="archive_02_inercia_2022.html">inercia 2022</a>
-            <br/><br/>
+        <h2>Archive</h2>
+
+        <ul>
+            <li>
+                <a href="archive_02_inercia_2022.html">Inercia 2022</a>
+            </li>
+        </ul>
+        
+        <br/><br/>
 
 
         <h2>Links</h2>
