--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <ul>
             <li><a href="https://https://zenta.rocks">zenta demoparty Website</a></li>
             <br/>
-            <li><a href="https://discord.gg/4MpV2CsJ">join the fast-challenge discord channel!</a></li>
+            <li><a href="https://discord.com/channels/534447164043165696/1037363488697368628">join the fast-challenge discord channel!</a></li>
 
             <br/>
             <li><a href="https://github.com/pandrr/fast-challenge-web">github</a></li>
