discord link again

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <td><nowrap>Dec, 28th</nowrap></td>
                 <td>14:45 CET</td>
                 <td>
-                    Join us on <a href="https://discord.gg/4MpV2CsJ">Discord</a> for the official start ceremony: <br/>
+                    Join us on <a href="https://discord.com/channels/534447164043165696/1037363488697368628">Discord</a> for the official start ceremony: <br/>
                     Together we will roll the dice to get a random prompt for the theme and reveal the soundtrack and midi-files for this challenge.                    
                 </td>
             </tr>
