--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <br/>
 
         There will be a theme or a prompt, some random words that the demo should be about. We will publish them on the 28th<br/>
+<br/><br/><br/>
+        <!-- Soundtrack will be announced on the 28th! <br/><br/> -->
+        This time the soundtrack is contributed by lucid! <br/>
 
-        Soundtrack will be announced on the 28th! <br/><br/>
-        <!-- This time the soundtrack is contributed by Gloom & Flipside <br/><br/> -->
+        <a class="download" download href="files/3/lucid-80s-quickProd02-formsLoopGrowth_v1.2.mp3">download music mp3 file</a>
 
-<!--         <a class="download" download href="files/2/Gloom_and_Flipside-Same_Old_Big_Beat_Norwegian_Soundtrack_For_Stomping_Robots_Apparently.mp3">download music mp3 file</a>
-
-        <a class="download" download href="files/2/midi.mid">download midi file</a>
- -->        
+        <!-- <a class="download" download href="files/2/midi.mid">download midi file</a> -->
+        
         <br/><br/><br/>
 
 <!--         Theme: Topics are:<br/><br/>
@@ -46,7 +46,7 @@
         <span class="keyword">Pink</span>
  -->        
 
-        <br/><br/><br/><br/>
+        <br/><br/>
         Results will be published on this page!
 
         <br/><br/>
