--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         
         <br/><br/><br/>
 
-<!--         Theme: Topics are:<br/><br/>
+        Theme: <br/>Topics are:
 
-        <span class="keyword">Flow</span>
-        <span class="keyword">High Contrast</span>
-        <span class="keyword">Random</span>
-        <span class="keyword">Pink</span>
- -->        
+        <span class="keyword" style="background-color:#007711;color:white">Gradients</span>
+        <span class="keyword" style="background-color:#007711;color:white">Particles</span>
+        <span class="keyword" style="background-color:#007711;color:white">Laser</span>
+        avoid: <span class="keyword" style="background-color:#770011;color:white">Loop</span>
+        
 
-        <br/><br/>
+        <br/><br/><br/><br/>
         Results will be published on this page!
 
         <br/><br/>
