--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
         The results were 5 stunning fast entries for the anaglyph demo compo and a lot fun working together on stuff.
 
 
-        <h2>Fast challenge 3: Zenta 2022</h2>
+        <h2>Fast challenge 4: MountainBytes 2023</h2>
 
-        So here comes installment #3. We will aim for Zenta 2022. 
+        So here comes installment #4. We will aim for MountainBytes 2023. 
 
         <br/>
 
         There will be a theme or a prompt, some random words that the demo should be about. We will publish them on the 28th<br/>
 <br/><br/><br/>
         <!-- Soundtrack will be announced on the 28th! <br/><br/> -->
-        This time the soundtrack is contributed by lucid! <br/>
-
-        <a class="download" download href="files/3/lucid-80s-quickProd02-formsLoopGrowth_v1.2.mp3">download music mp3 file</a>
+        This time the soundtrack is contributed by <a href="https://soundcloud.com/glxblt">GLXBLT</a>! <br/>
+   
 
         <!-- <a class="download" download href="files/2/midi.mid">download midi file</a> -->
         
@@ -61,29 +60,29 @@
         <h2>Timetable</h2>
         <table>
             <tr>
-                <td><nowrap>Dec, 28th</nowrap></td>
-                <td>14:45 CET</td>
+                <td><nowrap>Feb, 24th</nowrap></td>
+                <td>14:00 CET</td>
                 <td>
                     Join us on <a href="https://discord.com/channels/534447164043165696/1037363488697368628">Discord</a> for the official start ceremony: <br/>
                     Together we will roll the dice to get a random prompt for the theme and reveal the soundtrack and midi-files for this challenge.                    
                 </td>
             </tr>
 
-<!--             <tr>
-                <td>29th</td>
-                <td>14:00 CET</td>
-                <td>You should indicate if you're planning to release an entry.</td>
-            </tr>
- -->
+
             <tr>
-                <td>29th</td>
-                <td>15:00 CET</td>
-                <td>Deadline / Upload closes</td>
+                <td>25th</td>
+                <td>10:00 CET</td>
+                <td>IMPORTANT: You need to have your entry registered with mountainbytes compo system!</td>
+            </tr>
+            <tr>
+                <td>25th</td>
+                <td>14:00 CET</td>
+                <td>Deadline Demo Compo</td>
             </tr>
 
             <tr>
-                <td>29th</td>
-                <td>22:00 CET</td>
+                <td>25th</td>
+                <td>23:00 CET</td>
                 <td>Compo / Live stream</td>
             </tr>
         </table>
@@ -94,6 +93,9 @@
         <ul>
             <li>
                 <a href="archive_02_inercia_2022.html">Inercia 2022</a>
+            </li>
+            <li>
+                <a href="archive_03_inercia_2022.html">Zenta 2022</a>
             </li>
         </ul>
         
