--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         
         <br/><br/><br/>
 
-        Theme: <br/>Topics are:
+<!--         Theme: <br/>Topics are:
 
         <span class="keyword" style="background-color:#007711;color:white">Gradients</span>
         <span class="keyword" style="background-color:#007711;color:white">Particles</span>
         <span class="keyword" style="background-color:#007711;color:white">Laser</span>
         avoid: <span class="keyword" style="background-color:#770011;color:white">Loop</span>
-        
+ -->        
 
         <br/><br/><br/><br/>
         Results will be published on this page!
