--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <br/>
 
-        There will be a theme or a prompt, some random words that the demo should be about. We will publish them on the 28th<br/>
+        There will be a theme, some random words that the demo should be about. We will generate them on the 24th<br/>
 <br/><br/><br/>
         <!-- Soundtrack will be announced on the 28th! <br/><br/> -->
         This time the soundtrack is contributed by <a href="https://soundcloud.com/glxblt">GLXBLT</a>! <br/>
@@ -95,7 +95,7 @@
                 <a href="archive_02_inercia_2022.html">Inercia 2022</a>
             </li>
             <li>
-                <a href="archive_03_inercia_2022.html">Zenta 2022</a>
+                <a href="archive_03_zenta_2022.html">Zenta 2022</a>
             </li>
         </ul>
         
