--- a/archive_03_zenta_2022.html
+++ b/archive_03_zenta_2022.html
@@ -9,23 +9,38 @@
 
         <div class="content">
 
+        <h1>Archive: #3 Zenta 2022 </h1>
 
-        <h1>Fast challenge: <br/>
-        <b>make a demo in 24h</b></h1>
-
-
-    
-        <h2>wtf?</h2>
-        For Deadline 2022 LJ and Virgill organized the fantastic "One Cube" - challenge: Just take this awesome soundtrack with a reasonably short length, and here is a theme that's open enough to make a fast demo about.
         <br/><br/>
-        The results were 5 stunning fast entries for the anaglyph demo compo and a lot fun working together on stuff.
+
+<table>
+    <tr>
+        <th>place</th>
+        <th>name</th>
+        <th>author</th>
+        <th>links</th>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>g0d</td>
+        <td>Gaspode</td>
+        <td>
+            <a href="https://www.pouet.net/prod.php?which=93179">pouet</a>
+        </td>
+    </tr>
+    <tr>
+        <td>-</td>
+        <td>Lazers</td>
+        <td>Still</td>
+        <td>
+            <a href="https://youtu.be/sQBoqd7LjC4">youtube</a>
+        </td>
+    </tr>
+</table>
 
 
-        <h2>Fast challenge 3: Zenta 2022</h2>
+<br/><br/><br/><br/>
 
-        So here comes installment #3. We will aim for Zenta 2022. 
-
-        <br/>
 
         There will be a theme or a prompt, some random words that the demo should be about. We will publish them on the 28th<br/>
 <br/><br/><br/>
