--- a/archive_03_zenta_2022.html
+++ b/archive_03_zenta_2022.html
@@ -122,7 +122,7 @@
         <br/><br/>
 
         <ul>
-            <li><a href="https://https://zenta.rocks">zenta demoparty Website</a></li>
+            <li><a href="https://mountainbytes.ch/">Mountainbytes Website</a></li>
             <br/>
             <li><a href="https://discord.com/channels/534447164043165696/1037363488697368628">join the fast-challenge discord channel!</a></li>
 
