--- a/archive_03_zenta_2022.html
+++ b/archive_03_zenta_2022.html
@@ -127,7 +127,7 @@
             <li><a href="https://discord.com/channels/534447164043165696/1037363488697368628">join the fast-challenge discord channel!</a></li>
 
             <br/>
-            <li><a href="https://github.com/pandrr/fast-challenge-web">github</a></li>
+            <li><a href="https://github.com/pandrr/fast-challenge-web">this page on github</a></li>
 
 
         </ul>
