--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <br/><br/><br/>
         <!-- Soundtrack will be announced on the 28th! <br/><br/> -->
         This time the soundtrack is contributed by <a href="https://soundcloud.com/glxblt">GLXBLT</a>! <br/>
-   
+       <a class="download" download href="files/4/glxblt_-_super_blekare.mp3">download music mp3 file</a>
+
 
         <!-- <a class="download" download href="files/2/midi.mid">download midi file</a> -->
         
