--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
 <br/><br/><br/>
         <!-- Soundtrack will be announced on the 28th! <br/><br/> -->
         This time the soundtrack is contributed by <a href="https://soundcloud.com/glxblt">GLXBLT</a>! <br/>
-       <a class="download" download href="files/4/glxblt_-_super_blekare.mp3">download music mp3 file</a>
+       <a class="download" download href="files/4/glxblt_-_super_blekare.mp3">download music mp3 file (174 bpm)</a>
 
 
         <!-- <a class="download" download href="files/2/midi.mid">download midi file</a> -->
         
         <br/><br/><br/>
 
-<!--         Theme: <br/>Topics are:
+        Theme: <br/>Topics are:
 
-        <span class="keyword" style="background-color:#007711;color:white">Gradients</span>
-        <span class="keyword" style="background-color:#007711;color:white">Particles</span>
-        <span class="keyword" style="background-color:#007711;color:white">Laser</span>
-        avoid: <span class="keyword" style="background-color:#770011;color:white">Loop</span>
- -->        
+        <span class="keyword" style="background-color:#007711;color:white">Forms</span>
+        <span class="keyword" style="background-color:#007711;color:white">Portal</span>
+        <span class="keyword" style="background-color:#007711;color:white">Memory</span>
+        avoid: <span class="keyword" style="background-color:#770011;color:white">NO: Symmetry</span>
+        
 
         <br/><br/><br/><br/>
         Results will be published on this page!
