--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <span class="keyword" style="background-color:#007711;color:white">Forms</span>
         <span class="keyword" style="background-color:#007711;color:white">Portal</span>
         <span class="keyword" style="background-color:#007711;color:white">Memory</span>
-        avoid: <span class="keyword" style="background-color:#770011;color:white">NO: Symmetry</span>
+        DO NOT: <span class="keyword" style="background-color:#770011;color:white">Symmetry</span>
         
 
         <br/><br/><br/><br/>
