--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         This time the soundtrack is contributed by <a href="https://soundcloud.com/glxblt">GLXBLT</a>! <br/>
        <a class="download" download href="files/4/glxblt_-_super_blekare.mp3">download music mp3 file (174 bpm)</a>
 
-
-        <!-- <a class="download" download href="files/2/midi.mid">download midi file</a> -->
+<br/>
+        <a class="download" download href="files/4/glxblt_-_super_blekare.mid">download midi file</a>
         
         <br/><br/><br/>
 
