added missing entries

--- a/archive_03_zenta_2022.html
+++ b/archive_03_zenta_2022.html
@@ -22,10 +22,34 @@
     </tr>
     <tr>
         <td>2</td>
-        <td>g0d</td>
-        <td>Gaspode</td>
+        <td>Inside A Laser </td>
+        <td>armageddon421</td>
+        <td>
+            <a href="https://demozoo.org/productions/317029/">demozoo</a>
+        </td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td> Looping Verboten </td>
+        <td> Slipstream </td>
         <td>
             <a href="https://www.pouet.net/prod.php?which=93179">pouet</a>
+        </td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td> Looping Verboten </td>
+        <td> Slipstream </td>
+        <td>
+            <a href="https://demozoo.org/productions/317026/">demozoo</a>
+        </td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td> SP-0 Zenta Filler </td>
+        <td>MrSynAckSter</td>
+        <td>
+            <a href="https://demozoo.org/productions/317028/">demozoo</a>
         </td>
     </tr>
     <tr>
