added missing entries

--- a/archive_03_zenta_2022.html
+++ b/archive_03_zenta_2022.html
@@ -21,7 +21,7 @@
         <th>links</th>
     </tr>
     <tr>
-        <td>2</td>
+        <td>1</td>
         <td>Inside A Laser </td>
         <td>armageddon421</td>
         <td>
@@ -29,13 +29,14 @@
         </td>
     </tr>
     <tr>
-        <td>3</td>
-        <td> Looping Verboten </td>
-        <td> Slipstream </td>
+        <td>2</td>
+        <td>g0d</td>
+        <td>Gaspode</td>
         <td>
             <a href="https://www.pouet.net/prod.php?which=93179">pouet</a>
         </td>
     </tr>
+
     <tr>
         <td>3</td>
         <td> Looping Verboten </td>
