mb entries now for real

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
 
         <!-- There will be a theme, some random words that the demo should be about. We will generate them on the 24th<br/> -->
 <!-- <br/><br/><br/>
-        <!-- Soundtrack will be announced on the 28th! <br/><br/> -->
+         Soundtrack will be announced on the 28th! <br/><br/> 
         This time the soundtrack is contributed by <a href="https://soundcloud.com/glxblt">GLXBLT</a>! <br/>
        <a class="download" download href="files/4/glxblt_-_super_blekare.mp3">download music mp3 file (174 bpm)</a>
 
 <br/>
         <a class="download" download href="files/4/glxblt_-_super_blekare.mid">download midi file</a> -->
-        
+    -->
+    
         <!-- <br/><br/><br/>
 
         Theme: <br/>Topics are:
