mb entries now for real

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h2>Fast challenge 4: MountainBytes 2023</h2>
 
-        So here comes installment #4. We will aim for MountainBytes 2023. 
+        <!-- So here comes installment #4. We will aim for MountainBytes 2023.  -->
         <a href="archive_04_mountainbytes_2023.html">Mountainbytes 2023</a>
 
         <br/>
@@ -36,8 +36,8 @@
 
 <br/>
         <a class="download" download href="files/4/glxblt_-_super_blekare.mid">download midi file</a> -->
-    -->
     
+
         <!-- <br/><br/><br/>
 
         Theme: <br/>Topics are:
