mb entries now for real

--- a/archive_04_mountainbytes_2023.html
+++ b/archive_04_mountainbytes_2023.html
@@ -42,7 +42,17 @@
         <td>Memory Lane </td>
         <td>Still</td>
         <td>
-            <a href=" https://youtu.be/h-GA3SgqKm0">youtube</a>
+            <a href="https://youtu.be/h-GA3SgqKm0">youtube</a>
+        </td>
+    </tr>
+    <tr>
+        <td>#</td>
+        <td>konkretie </td>
+        <td>Brainlez Coders!</td>
+        <td>
+            <a href="https://www.pouet.net/prod.php?which=93806">pouet</a>
+            <a href="https://vsariola.github.io/konkretie/">online version</a>
+            
         </td>
     </tr>
 
