mb entries now for real

--- a/archive_04_mountainbytes_2023.html
+++ b/archive_04_mountainbytes_2023.html
@@ -56,6 +56,17 @@
         </td>
     </tr>
 
+    <tr>
+        <td>#</td>
+        <td>Endless forms most immemorial </td>
+        <td>Wavesitter</td>
+        <td>
+            <a href="https://www.pouet.net/prod.php?which=93804">pouet</a>
+            <a href="https://wavesitter.com/demos/endless-forms/">online version</a>
+            
+        </td>
+    </tr>
+
 </table>
 
 
