--- a/archive_04_mountainbytes_2023.html
+++ b/archive_04_mountainbytes_2023.html
@@ -38,6 +38,8 @@
         <td>4</td>
         <td>
             <a href="https://www.youtube.com/watch?v=wUT0xZvg2l0">youtube</a>
+            <a href="https://www.pouet.net/prod.php?which=93811">pouet</a>
+            
         </td>
     </tr>
 
